--- a/LoveYou.html
+++ b/LoveYou.html
@@ -63,7 +63,7 @@
         <p class="the-p p-three">我也待你岁月如故，眉眼如初</p>
 
         <!-- 修改后的时钟结构 -->
-        <div class="clock" id="clock">
+        <div class="clock" id="clock" style="font-family: Arial, sans-serif !important;">
             <div style="box-shadow:inset -7px -7px 12px rgba(0, 0, 0, .4),inset 7px 7px 12px rgba(0, 0, 0, .4);display:inline-block;border-radius: 25px;padding: 30px;">
                 <p class="the-p p-three" style="font-family: 'ZiYanFont', cursive;">宝宝❤️我们已经在一起：</p>
                 <div class="time-rows">
